Working on debugging draft, firewall rules

--- a/DMZ/SMS/testRabbitMQ.ini
+++ b/DMZ/SMS/testRabbitMQ.ini
@@ -3,8 +3,8 @@ BROKER_HOST = 172.30.103.53
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
-VHOST = Authentication
-EXCHANGE = amq_exchange
-QUEUE = SMS
+VHOST = SMS
+EXCHANGE = amq.direct
+QUEUE = sms
 EXCHANGE_TYPE = direct
 AUTO_DELETE = false
