--- a/db/host.ini
+++ b/db/host.ini
@@ -1,11 +1,11 @@
 [Authentication]
-BROKER_HOST = 172.30.103.53
+BROKER_HOST = 172.30.121.142
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
-VHOST = Authentication
-SERVER_EXCHANGE = auth_exchange
-QUEUE = authentication
+VHOST = draft
+SERVER_EXCHANGE = amq.direct
+QUEUE = draft_queue
 ;QUEUE_PREFIX = testQueue
 EXCHANGE_TYPE = direct
-AUTO_DELETE = true
+AUTO_DELETE = false
