Revert "Got draft, remove, and trade working"
This reverts commit 71407755778c3cc5ece8ae513bb444cee03c0619.

--- a/db/host.ini
+++ b/db/host.ini
@@ -1,11 +1,11 @@
 [Authentication]
-BROKER_HOST = 172.30.121.142
+BROKER_HOST = 172.30.103.53
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
-VHOST = draft
-SERVER_EXCHANGE = amq.direct
-QUEUE = draft_queue
+VHOST = Authentication
+SERVER_EXCHANGE = auth_exchange
+QUEUE = authentication
 ;QUEUE_PREFIX = testQueue
 EXCHANGE_TYPE = direct
-AUTO_DELETE = false
+AUTO_DELETE = true
