Added files for sending email updates, modified sms code to apply for emails

--- a/DMZ/emails/testRabbitMQ.ini
+++ b/DMZ/emails/testRabbitMQ.ini
@@ -5,6 +5,6 @@ USER = test
 PASSWORD = test
 VHOST = email
 EXCHANGE = amq.direct
-QUEUE = sms
+QUEUE = email
 EXCHANGE_TYPE = direct
 AUTO_DELETE = false
