updated .ini file

--- a/DMZ/emails/testRabbitMQ.ini
+++ b/DMZ/emails/testRabbitMQ.ini
@@ -1,9 +1,9 @@
-[SMS]
+[email]
 BROKER_HOST = 172.30.121.142
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
-VHOST = SMS
+VHOST = email
 EXCHANGE = amq.direct
 QUEUE = sms
 EXCHANGE_TYPE = direct
