debugging rabbit within login code

--- a/frontend/rabbit/example-host.ini
+++ b/frontend/rabbit/example-host.ini
@@ -1,11 +1,10 @@
-; [testServer]
-; BROKER_HOST = 127.0.0.1
-; BROKER_PORT = 5672
-; USER = test
-; PASSWORD = test
-; VHOST = testHost
-; SERVER_EXCHANGE = testExchange
-; QUEUE = testQueue
-; ;QUEUE_PREFIX = testQueue
-; EXCHANGE_TYPE = direct
-; AUTO_DELETE = tru  e
+[Authentication]
+BROKER_HOST = 172.30.121.142
+BROKER_PORT = 5672
+USER = test
+PASSWORD = test
+VHOST = Authentication
+SERVER_EXCHANGE = auth_exchange
+QUEUE = authentication
+EXCHANGE_TYPE = direct
+AUTO_DELETE = false
