added ini changes for 2fa queue and vhost

--- a/frontend/src/login/includes/hostt.ini
+++ b/frontend/src/login/includes/hostt.ini
@@ -1,10 +1,10 @@
-[Authentication]
+[2fa]
 BROKER_HOST = 172.30.121.142
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
-VHOST = Authentication
-EXCHANGE = auth_exchange
-QUEUE = authentication
+VHOST = 2fa
+EXCHANGE = amq.direct
+QUEUE = 2fa
 EXCHANGE_TYPE = direct
-AUTO_DELETE = true
+AUTO_DELETE = false
