2fa is all working but the final verification redirect still has some bugs

--- a/db/host.ini
+++ b/db/host.ini
@@ -9,3 +9,14 @@ QUEUE = draft_queue
 ;QUEUE_PREFIX = testQueue
 EXCHANGE_TYPE = direct
 AUTO_DELETE = false
+
+[SMS]
+BROKER_HOST = 127.0.0.1
+BROKER_PORT = 5672
+USER = test
+PASSWORD = test
+VHOST = SMS
+SERVER_EXCHANGE = amq.direct
+QUEUE = sms
+EXCHANGE_TYPE = direct
+AUTO_DELETE = false
