added form elements for multiple emails for invite system

--- a/db/host.ini
+++ b/db/host.ini
@@ -20,3 +20,14 @@ SERVER_EXCHANGE = amq.direct
 QUEUE = sms
 EXCHANGE_TYPE = direct
 AUTO_DELETE = false
+
+[email]
+BROKER_HOST = 127.0.0.1
+BROKER_PORT = 5672
+USER = test
+PASSWORD = test
+VHOST = email
+EXCHANGE = amq.direct
+QUEUE = email
+EXCHANGE_TYPE = direct
+AUTO_DELETE = false
