testing matchups and scoring

--- a/db/host.ini
+++ b/db/host.ini
@@ -27,7 +27,7 @@ BROKER_PORT = 5672
 USER = test
 PASSWORD = test
 VHOST = email
-EXCHANGE = amq.direct
+SERVER_EXCHANGE = amq.direct
 QUEUE = email
 EXCHANGE_TYPE = direct
 AUTO_DELETE = false
